# cdk-rs

ic-cdk/: Cargo.toml
ic-cdk-executor/: Cargo.toml
