[package]
name = "ic-cdk-executor"
version = "1.0.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Async executor for `ic-cdk`"
categories = ["asynchronous", "rust-patterns"]
keywords = ["internet-computer", "dfinity", "canister", "cdk"]

[dependencies]
slotmap.workspace = true
ic0.workspace = true
